--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,7 @@ update_pre_commit_config = "test_utils.pre_commit.update_pre_commit_config:main"
 python = ">=3.8,<3.13"
 mypy = "^1.10.1"
 toml = "^0.10.2"
+tomli = "2.0.1"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
